# mlops

./: .gitignore  README.md  pyproject.toml
mlops/: rest.py  tf_eg.py  torch_eg.py
mlops/eg/: nlp.py  tf.html  tf.py  tracking.py
